syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ServerErrors";
option java_package = "de.qaware.rookie.cloud.grpc.proto";

package errors;

message ValidationError {
    string message = 1;
}
