syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloProto";
option java_package = "de.qaware.rookie.cloud.grpc.proto";

package service;

import "service_dtos.proto";


service HelloService {
   // Obtains the feature at a given position.
   rpc sayHello(dto.HelloRequest) returns (dto.HelloReply) {}
}
